# noburnout-itfest-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  debug_script.py  main.py  pyproject.toml  requirements.txt  transcript_test_20250621_232454.json
.github/workflows/: itfest-app-AutoDeployTrigger-33829be4-df8b-490b-9ecf-c0a331aeb77d.yml  itfestapp-new-AutoDeployTrigger-dc5a6ca9-c747-44ed-8cb7-5f5358d740b6.yml
app/: config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: ai.py  auth.py  document.py  download.py  transcript.py
app/models/: ai_models.py  document_models.py  transcript.py
app/schemas/: auth_schemas.py
app/services/: auth_service.py  azure_service.py  document_service.py  presentation_service.py  storage_services.py  youtube_service.py
app/storage/presentations/: 00801d61-a782-494b-a7c6-2d4fb555c62c.pptx  081bf0ef-080c-4975-9461-853bd62f9db6.pptx  5e9128bb-b330-4e6b-af77-d0056204d064.pptx  67180c34-df06-43a9-9c29-09fbb2849f47.pptx  7af565c3-ed98-4e36-a38c-803816946d05.pptx  9ae61aee-c984-4340-b79c-49f39d0d6cf3.pptx
app/storage/transcripts/: 26PrgjTboVQ.json
