[project]
name = "noburnout-itfest-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.16.2",
    "azure-cognitiveservices-language-textanalytics>=0.2.2",
    "azure-identity>=1.23.0",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "markdown>=3.8",
    "openai>=1.88.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pytube>=15.0.0",
    "redis>=6.2.0",
    "reportlab>=4.4.1",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
    "weasyprint>=65.1",
    "youtube-transcript-api>=1.1.0",
]
